--- a/environment.yml
+++ b/environment.yml
@@ -347,4 +347,6 @@ dependencies:
   - zipp=3.17.0=pyhd8ed1ab_0
   - zlib=1.2.13=hd590300_5
   - zstd=1.5.5=hfc55251_0
+  - pip:
+    - st-pages==0.4.5
 prefix: /home/sieun/miniconda3/envs/orange
